app/assets/stylesheets/shared/document_view.scss
@import "utils";

#content .document {
  margin-bottom: 2em;
  overflow: auto;

  .title {
    @include type-36;
  }

  .summary {
    @include type-14;
    font-style: italic;
  }

  .body {

    h2 {
      @include scaled_type(24);
      @include scaled_margin_top(16);
    }

    h3 {
      @include type-18;
      margin-bottom: 0;
    }

    p, ul, ol {
      font-size: 0.875em;
      line-height: 1.714em;
    }

    ul, ol {
      padding-left: 2em;

      ul, ol {
        margin-top: #{$baseline_in_px / 14}em;
      }
    }

    li {
      @include type-16;
      @include scaled_margin_bottom(24);

      p {
        margin-bottom: 0;
      }
    }

    table {
      tr {
        padding: 0;

        td {
          padding: 0;
          @include type-14;
          border: 1px solid #ddd;
          padding: 0 0.75em;
        }
      }
    }

    figure {
      float: right;
      max-width: 50%;
      margin-left: 1em;

      div.img {
        @include box-shadow(0, 0, 2px, #d5d5d5);
        background: #fff;
        border: 1px solid #ddd;
        margin-bottom: 0.4285em;
        margin-bottom: 0.25em;
        overflow: hidden;

        img, a img {
          margin: 0;
        }
      }

      figcaption {
        @include type-12;
        color: #555;
        margin-bottom: 1em;
      }

      div.img, figcaption {
        padding: 5px 5px 0 5px;
      }
    }
  }

  pre.body {
    @include type-14;
  }
}

#content #news_page {
  background: #fff;
  padding: 0;

  .document {
    border: none;
    padding: 0;
    padding-top: 1.5em;

    .body p {
      max-width: auto;
    }
  }

  .related_documents {
    padding: 1.45em 0;
    background: #eee;
    border-top: 1px solid #ddd;
    margin-bottom: 0;

    @media only screen and (min-width: 768px) {
      border-left: 1px solid #ccc;
      border-bottom: 1px solid #ddd;
      border-top: 0;
    }

    section {
      margin: 0 4%;
    }
  }
}

